--- a/front-end/src/components/Chat/Messages.module.css
+++ b/front-end/src/components/Chat/Messages.module.css
@@ -11,4 +11,16 @@
   scroll-behavior: smooth;
   display: flex;
   flex-direction: column-reverse;
+  scrollbar-color: #4cc9f0 #f0efeb;
+  scrollbar-width: auto;
+}
+
+.chat-messages-container::-webkit-scrollbar {
+  background-color: #f0efeb;
+  width: 8px;
+}
+
+.chat-messages-container::-webkit-scrollbar-thumb {
+  background-color: #4cc9f0;
+  -webkit-border-radius: 10px;
 }
