--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Open+Sans&display=swap');
 * {
   box-sizing: border-box;
   margin: 0;
@@ -10,5 +11,11 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background-color: #3f37c9;
+  background-color: #212529;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 1.1rem;
 }
