--- a/front-end/src/components/Chat/Message.module.css
+++ b/front-end/src/components/Chat/Message.module.css
@@ -2,6 +2,11 @@
   padding: 1em;
   display: flex;
   gap: 10px;
+  background-color: rgba(92, 95, 97, 0.3);
+  border-radius: 10px;
+  width: 95%;
+  /* box-shadow: 0px 0 1px 1px rgba(255, 255, 255, 0.9); */
+  margin-left: 5px;
 }
 
 .message-user-image {
@@ -13,9 +18,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  color: white;
 }
 
-.message-time {
-  margin-left: auto;
-  color: #3d5a80;
+.message-user-name {
+  font-weight: 700;
+  color: #4cc9f0;
 }
