--- a/front-end/src/components/Chat/ChatWindow.module.css
+++ b/front-end/src/components/Chat/ChatWindow.module.css
@@ -6,5 +6,7 @@
   height: 90%;
   width: min(70%, 1500px);
   box-shadow: 0px 0px 7px 1px rgba(156, 229, 247, 0.8);
+  background: linear-gradient(to bottom left, #414345, #232526);
+
   border-radius: 10px;
 }
