--- a/front-end/src/components/Chat/Message.module.css
+++ b/front-end/src/components/Chat/Message.module.css
@@ -2,11 +2,10 @@
   padding: 1em;
   display: flex;
   gap: 10px;
-  background-color: rgba(92, 95, 97, 0.3);
+  /* background-color: rgba(92, 95, 97, 0.3); */
   border-radius: 10px;
   width: 95%;
   /* box-shadow: 0px 0 1px 1px rgba(255, 255, 255, 0.9); */
-  margin-left: 5px;
 }
 
 .message-user-image {
