--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -7,9 +7,8 @@
 
 #root {
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 250px 1fr;
   overflow: hidden;
   background-color: #212529;
 }
@@ -18,4 +17,8 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   font-size: 1.1rem;
+  --primary-color: #414345;
+  --secondary-color: #232526;
+  --text-color: #edf6f9;
+  --username-color: #4cc9f0;
 }
