--- a/front-end/src/components/Chat/ChatWindow.module.css
+++ b/front-end/src/components/Chat/ChatWindow.module.css
@@ -3,10 +3,13 @@
   flex-direction: column;
   gap: 1em;
   padding: 2em;
-  height: 90%;
-  width: min(70%, 1500px);
-  box-shadow: 0px 0px 7px 1px rgba(156, 229, 247, 0.8);
-  background: linear-gradient(to bottom left, #414345, #232526);
+  max-height: 100vh;
+  width: 100%;
+  background: linear-gradient(
+    to bottom left,
+    var(--primary-color),
+    var(--secondary-color)
+  );
 
   border-radius: 10px;
 }
