--- a/front-end/src/components/Chat/Message.module.css
+++ b/front-end/src/components/Chat/Message.module.css
@@ -2,10 +2,8 @@
   padding: 1em;
   display: flex;
   gap: 10px;
-  /* background-color: rgba(92, 95, 97, 0.3); */
   border-radius: 10px;
   width: 95%;
-  /* box-shadow: 0px 0 1px 1px rgba(255, 255, 255, 0.9); */
 }
 
 .message-user-image {
@@ -17,10 +15,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  color: white;
+  color: var(--text-color);
 }
 
 .message-user-name {
   font-weight: 700;
-  color: #4cc9f0;
+  color: var(--username-color);
 }
