Add sockets and UI update (#7)
* Initial commit. Basic styling, and functionality.

* added more styling. Animated scrolling

* added more styling

* finalized(sort of) chat window

* added users panel. Made chat fullscreen

* added more styling

* finalized(sort of) chat window

* added users panel. Made chat fullscreen

* added basic routing to groups

* Updated gitignore

* fix App.tsx

* remove config.json from index

* removed build folder and added newMessage event handler

* set up CORS

* added frontend

* basic sockets implementation

* added more styling

* finalized(sort of) chat window

* added users panel. Made chat fullscreen

* added basic routing to groups

* Updated gitignore

* remove config.json from index

* removed build folder and added newMessage event handler

* set up CORS

* added frontend

* basic sockets implementation

* fixed username issue in sockets

* remove redundant files

--- a/front-end/src/components/Chat/ChatWindow.module.css
+++ b/front-end/src/components/Chat/ChatWindow.module.css
@@ -3,8 +3,13 @@
   flex-direction: column;
   gap: 1em;
   padding: 2em;
-  height: 90%;
-  width: min(70%, 1500px);
-  background-color: #f0efeb;
-  border-radius: 20px;
+  max-height: 100vh;
+  width: 100%;
+  background: linear-gradient(
+    to bottom left,
+    var(--primary-color),
+    var(--secondary-color)
+  );
+
+  border-radius: 10px;
 }
