--- a/front-end/src/components/Chat/Message.module.css
+++ b/front-end/src/components/Chat/Message.module.css
@@ -2,6 +2,8 @@
   padding: 1em;
   display: flex;
   gap: 10px;
+  border-radius: 10px;
+  width: 95%;
 }
 
 .message-user-image {
@@ -13,9 +15,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  color: var(--text-color);
 }
 
-.message-time {
-  margin-left: auto;
-  color: #3d5a80;
+.message-user-name {
+  font-weight: 700;
+  color: var(--username-color);
 }
