--- a/front-end/src/Pages/Login.module.css
+++ b/front-end/src/Pages/Login.module.css
@@ -1,7 +1,7 @@
 .root {
   display: grid;
   height: 100vh;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 500px 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-areas:
     '. .'
@@ -14,4 +14,12 @@
     var(--secondary-color) 100%
   );
   justify-items: center;
+}
+
+@media screen and (max-width: 1250px) {
+  .root {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
