--- a/front-end/src/components/UI/Button.module.css
+++ b/front-end/src/components/UI/Button.module.css
@@ -1,5 +1,5 @@
 .btn {
-  width: min-content;
+  width: 100%;
   font-size: 1rem;
   padding: 0.5em 1em;
   background-color: var(--username-color);
