--- a/front-end/src/components/SignUp/SignUpForm.module.css
+++ b/front-end/src/components/SignUp/SignUpForm.module.css
@@ -6,6 +6,7 @@
   grid-area: form;
   padding-top: 4em;
   max-width: 600px;
+  position: relative;
 }
 
 .pair {
@@ -27,6 +28,15 @@ input {
   width: 100%;
 }
 
+.error-message {
+  text-align: center;
+  color: red;
+  opacity: 0;
+  transition: opacity 250ms ease-in-out;
+}
+.error-message.show {
+  opacity: 1;
+}
 input:focus {
   box-shadow: 0 0 5px 1px var(--primary-color);
 }
@@ -41,4 +51,16 @@ label {
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+
+.bottom {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  transform: translateY(-25px);
+  transition: transform 250ms ease-in;
+}
+
+.bottom.show {
+  transform: translateX(0);
 }
