--- a/front-end/src/Pages/Login.module.css
+++ b/front-end/src/Pages/Login.module.css
@@ -16,6 +16,40 @@
   justify-items: center;
 }
 
+.prompt {
+  position: absolute;
+  top: 30px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.prompt .prompt-box {
+  background: var(--secondary-color);
+  color: var(--text-color);
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.8);
+  padding: 1em;
+  border-radius: 10px;
+  display: flex;
+  gap: 1em;
+  opacity: 0;
+  transform: translateY(-60px);
+  position: relative;
+  transition: opacity 250ms ease-in, transform 250ms ease-in;
+}
+
+.prompt .prompt-box.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.prompt .prompt-close {
+  background: var(--gradient-to-right);
+  background-clip: text;
+  color: transparent;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 1250px) {
   .root {
     display: flex;
