--- a/front-end/src/Pages/CreateRoom.module.css
+++ b/front-end/src/Pages/CreateRoom.module.css
@@ -13,13 +13,14 @@
   background: var(--gradient-to-right);
   background-clip: text;
   color: transparent;
-  font-size: clamp(60px, 6vw, 130px);
+  font-size: clamp(70px, 6vw, 130px);
   text-align: center;
 }
 
 .root input {
-  width: 200px;
+  width: 400px;
   text-align: center;
+  font-size: 1.5em;
 }
 
 .create {
@@ -28,11 +29,11 @@
   flex-direction: column;
   gap: 1em;
   align-items: flex-start;
-  padding-top: 1em;
+  padding-right: 10px;
 }
 
 .create button {
-  width: 200px;
+  width: 400px;
 }
 
 .info {
@@ -54,4 +55,18 @@
   grid-area: title;
   justify-self: center;
   align-self: center;
+}
+
+@media screen and (max-width: 1100px) {
+  .root {
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.5fr 0.25fr 0.5fr;
+    grid-template-areas:
+      'title'
+      'info'
+      'create';
+  }
+  .create {
+    align-items: center;
+  }
 }
