added standard border radius for non webkit browser

--- a/front-end/src/components/Chat/Messages.module.css
+++ b/front-end/src/components/Chat/Messages.module.css
@@ -23,4 +23,5 @@
 .chat-messages-container::-webkit-scrollbar-thumb {
   background-color: var(--username-color);
   -webkit-border-radius: 10px;
+  border-radius: 10px;
 }
