--- a/front-end/src/Pages/CreateRoom.module.css
+++ b/front-end/src/Pages/CreateRoom.module.css
@@ -62,18 +62,6 @@
     align-items: center;
   }
 }
-
-.bottom {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-  transform: translateY(-25px);
-  transition: transform 250ms ease-in;
-}
-.bottom.show {
-  transform: translateX(0);
-}
-
 .error-message {
   text-align: center;
   background: var(--danger-gradient);
@@ -85,4 +73,9 @@
 }
 .error-message.show {
   opacity: 1;
+}
+
+.create p {
+  width: 400px;
+  text-align: center;
 }
