added loading screen for messages

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -13,6 +13,7 @@ body {
     #20e3b2,
     #0cebeb
   );
+  --green-color: #29ffc6;
   --gradient-danger: linear-gradient(to right, #da4453, #89216b);
   --danger-gradient: linear-gradient(to left, #ee0979, #ff6a00);
   --background-gradient: linear-gradient(
