--- a/front-end/src/components/UI/Notification.module.css
+++ b/front-end/src/components/UI/Notification.module.css
@@ -24,5 +24,7 @@
   background: var(--gradient-to-right);
   background-clip: text;
   color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   cursor: pointer;
 }
