--- a/front-end/src/components/UI/Button.module.css
+++ b/front-end/src/components/UI/Button.module.css
@@ -4,7 +4,7 @@
   padding: 0.5em 1em;
   border: none;
   border-radius: 5px;
-  box-shadow: 1px 1px 1px 1px rgba(134, 134, 134, 0.8);
+  box-shadow: 1px 1px 1px 2px rgba(70, 70, 70, 0.8);
   transition: background-position 200ms ease-in, box-shadow 100ms ease-in, transform 100ms ease-in;
 }
 
@@ -22,7 +22,7 @@
 .btn-red {
   background: var(--gradient-danger);
   background-size: 200% 200%;
-  box-shadow: 1px 1px 1px 0px rgba(255, 0, 0, 0.8);
+  /* box-shadow: 1px 1px 1px 0px rgba(255, 0, 0, 0.8); */
 }
 
 .btn:hover {
