--- a/front-end/src/components/Other/ShowInvite.module.css
+++ b/front-end/src/components/Other/ShowInvite.module.css
@@ -1,5 +1,5 @@
 .container {
-  color: #212529;
+  color: black;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -12,23 +12,31 @@
   justify-content: space-between;
   gap: 1em;
   background: linear-gradient(to right, #673ab7, #512da8);
+  border: 2px solid #673ab7;
+  /* width: 500px !important; */
 }
 
 .roomName {
   color: #e0aaff;
+  align-self: flex-start;
+  font-size: 2rem;
+  width: 100%;
+  border-bottom: 1px solid #281652;
+  padding-bottom: 10px;
 }
 
 .card h1 {
   color: #80ffdb;
   text-transform: uppercase;
+  font-size: 2.5rem;
 }
 
 .list-about {
   width: 90%;
   display: flex;
   flex-direction: column;
-  gap: 1.5em;
-  list-style: none;
+  gap: 0.5em;
+  /* list-style: none; */
   text-align: justify;
   color: #f8f9fa;
 }
@@ -37,6 +45,8 @@
   width: 100%;
   display: flex;
   justify-content: space-evenly;
+  border-top: 1px solid #281652;
+  padding-top: 10px;
 }
 
 .btn-pair button {
