--- a/front-end/src/components/UI/Button.module.css
+++ b/front-end/src/components/UI/Button.module.css
@@ -9,7 +9,8 @@
 }
 
 .btn-green {
-  background: var(--gradient-to-bottom-left);
+  color: black;
+  background: linear-gradient(to right, #00c9ff, #92fe9d);
   background-size: 200% 200%;
 }
 
@@ -22,6 +23,7 @@
 .btn-red {
   background: var(--gradient-danger);
   background-size: 200% 200%;
+  color: white;
   /* box-shadow: 1px 1px 1px 0px rgba(255, 0, 0, 0.8); */
 }
 
