--- a/front-end/src/components/Other/ShowInvite.module.css
+++ b/front-end/src/components/Other/ShowInvite.module.css
@@ -1,54 +1,83 @@
-.container {
-  color: black;
+.root {
+  display: flex;
+  height: 100vh;
   justify-content: center;
+  background-image: linear-gradient(to bottom right, var(--primary-color) 0%, var(--secondary-color) 100%);
   align-items: center;
-  text-align: center;
+  padding: 5px;
 }
 
-.card {
+.about {
   display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.room-name {
+  color: var(--text-color);
+  text-align: right;
+  font-weight: bold;
+  text-align: center;
+  font-size: clamp(20px, 2vw, 30px);
+}
+
+.right {
+  display: flex;
+  gap: 1em;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  gap: 1em;
-  background: linear-gradient(to right, #673ab7, #512da8);
-  border: 2px solid #673ab7;
-  /* width: 500px !important; */
-}
-
-.roomName {
-  color: #e0aaff;
-  align-self: flex-start;
-  font-size: 2rem;
-  width: 100%;
-  border-bottom: 1px solid #281652;
-  padding-bottom: 10px;
-}
-
-.card h1 {
-  color: #80ffdb;
-  text-transform: uppercase;
-  font-size: 2.5rem;
-}
-
-.list-about {
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5em;
-  /* list-style: none; */
-  text-align: justify;
-  color: #f8f9fa;
+  text-align: center;
 }
 
 .btn-pair {
-  width: 100%;
   display: flex;
-  justify-content: space-evenly;
-  border-top: 1px solid #281652;
-  padding-top: 20px;
+  gap: 1em;
+  width: 100%;
 }
 
-.btn-pair button {
-  width: 45%;
+.separator {
+  grid-area: separator;
+  background: var(--gradient-to-right);
+  width: 3px;
+  border-radius: 5px;
+}
+
+.container {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100vw;
+  gap: 10px;
+}
+
+.lucky-text {
+  color: var(--text-color);
+  font-size: 2.5rem;
+}
+
+@media (max-width: 920px) {
+  .heading-text {
+    text-align: right !important;
+  }
+}
+
+@media (max-width: 800px) {
+  .container {
+    flex-direction: column;
+    width: auto;
+    gap: 2em;
+  }
+  .heading-text {
+    text-align: center !important;
+  }
+  .about {
+    align-items: center;
+  }
+}
+
+@media (max-width: 500px) {
+  .btn-pair {
+    flex-direction: column;
+    width: 80%;
+  }
 }
