--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Open+Sans&display=swap');
+
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
