--- a/front-end/src/components/Chat/Messages.module.css
+++ b/front-end/src/components/Chat/Messages.module.css
@@ -2,7 +2,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  /* gap: 1em; */
+  word-break: break-all;
 }
 
 .chat-messages-container {
