--- a/front-end/src/Pages/Home.module.css
+++ b/front-end/src/Pages/Home.module.css
@@ -1,7 +1,11 @@
 .root {
   display: grid;
-  grid-template-rows: 60px 1fr;
-  height: 100vh;
+  grid-template-rows: 60px auto 1fr;
+  grid-template-areas:
+    'navbar'
+    'banner'
+    'technologies';
+  min-height: 100vh;
 }
 .top {
   display: grid;
@@ -10,6 +14,7 @@
   grid-template-columns: 2fr 1fr;
   background: #151a1f;
   grid-template-areas: 'app image';
+  grid-area: banner;
 }
 
 #app-name {
@@ -19,35 +24,56 @@
   color: transparent;
 }
 
-#get-started-btn {
+.btn {
   text-decoration: none;
   color: black;
   width: max-content;
-  background: var(--green-color);
   padding: 1em 2em;
   border-radius: 5px;
   box-shadow: rgb(112, 112, 112) 0px 1px 5px;
+}
+#get-started-btn {
+  background: var(--green-color);
+}
+
+a.btn:visited {
+  color: black;
+}
+
+#github-btn,
+a[id='github-btn'] {
+  color: var(--text-color);
 }
 
 #get-started-btn:hover {
   background-color: #29ffc6d0;
 }
 
-#get-started-btn:active {
+.btn:active {
   transform: scale(0.95);
+}
+
+#app-footer {
+  color: var(--text-color);
 }
 
 #navbar {
   background: #151a1f;
   position: relative;
   z-index: 2;
+  grid-area: navbar;
 }
 
 #app-about {
   color: var(--text-color);
-  text-align: justify;
   font-size: clamp(20px, 1.5vw, 30px);
   max-width: 50ch;
+}
+
+#technology {
+  grid-area: technologies;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 .app {
   grid-area: app;
@@ -67,6 +93,10 @@
   height: clamp(256px, min(45vh, 45vw), 500px);
 }
 
+.btn-bar {
+  display: flex;
+  gap: 1em;
+}
 @keyframes spinning {
   from {
     transform: rotate(0);
@@ -83,7 +113,7 @@
     grid-template-areas:
       'image'
       'app';
-    height: 100%;
+    height: max-content;
     justify-content: center;
     text-align: center;
     align-content: center;
@@ -92,7 +122,7 @@
     padding-top: 0;
     justify-content: start;
   }
-  #get-started-btn {
+  .btn {
     width: 100%;
   }
   #navbar > a {
@@ -100,14 +130,20 @@
     margin-right: auto;
   }
 
-  a:first-child {
+  /* a:first-child {
     width: 100vw;
     text-align: center;
-  }
+  } */
   #navbar {
     gap: 0;
     justify-content: flex-start;
     flex-wrap: wrap;
     padding: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .btn-bar {
+    flex-direction: column;
   }
 }
