--- a/front-end/src/Pages/Home.module.css
+++ b/front-end/src/Pages/Home.module.css
@@ -7,9 +7,10 @@
     'technologies';
   min-height: 100vh;
 }
+
 .top {
   display: grid;
-  height: 50vh;
+  min-height: 50vh;
   width: 100vw;
   grid-template-columns: 2fr 1fr;
   background: #151a1f;
@@ -32,6 +33,7 @@
   border-radius: 5px;
   box-shadow: rgb(112, 112, 112) 0px 1px 5px;
 }
+
 #get-started-btn {
   background: var(--green-color);
 }
@@ -75,6 +77,7 @@ a[id='github-btn'] {
   padding-top: 1em;
   padding-bottom: 1em;
 }
+
 .app {
   grid-area: app;
   display: flex;
@@ -82,8 +85,10 @@ a[id='github-btn'] {
   justify-content: center;
   gap: 1em;
   padding: 3em;
+  padding-bottom: 1.5em;
   height: max-content;
 }
+
 #react-spinning-image {
   animation: spinning 2500ms linear;
   animation-iteration-count: infinite;
@@ -97,10 +102,12 @@ a[id='github-btn'] {
   display: flex;
   gap: 1em;
 }
+
 @keyframes spinning {
   from {
     transform: rotate(0);
   }
+
   to {
     transform: rotate(180deg);
   }
@@ -118,13 +125,16 @@ a[id='github-btn'] {
     text-align: center;
     align-content: center;
   }
+
   .app {
     padding-top: 0;
     justify-content: start;
   }
+
   .btn {
     width: 100%;
   }
+
   #navbar > a {
     margin-left: auto;
     margin-right: auto;
