--- a/front-end/src/components/LeftPane/Users/LeftPane.module.css
+++ b/front-end/src/components/LeftPane/Users/LeftPane.module.css
@@ -26,6 +26,7 @@
   font-weight: 700;
   column-gap: 10px;
   overflow: hidden;
+  position: relative;
 }
 
 .user-image {
@@ -36,4 +37,14 @@
 .exit-group {
   width: 100%;
   margin-top: auto;
+}
+
+.user-online {
+  background-color: rgb(43, 102, 43);
+  border-radius: 50%;
+  height: 20px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 20px;
 }
