--- a/front-end/src/components/LeftPane/Users/LeftPane.module.css
+++ b/front-end/src/components/LeftPane/Users/LeftPane.module.css
@@ -40,7 +40,7 @@
 }
 
 .user-online {
-  background-color: rgb(43, 102, 43);
+  background-color: var(--online-color);
   border-radius: 50%;
   height: 20px;
   position: absolute;
