--- a/front-end/src/Pages/DialogBox.module.css
+++ b/front-end/src/Pages/DialogBox.module.css
@@ -37,8 +37,9 @@
     padding: 2em;
 }
 .invite-link{
-    display: flex;
+    display: grid;
     gap: 1em;
+    grid-template-columns: 3fr 1fr;
 }
 .link-box{
     border: 1px solid var(--primary-color);
