fix show password issue
the enter key should no longer toggle the password visibility.

--- a/front-end/src/components/UI/PasswordField.module.css
+++ b/front-end/src/components/UI/PasswordField.module.css
@@ -1,11 +1,9 @@
-.span-eye{
-    display: flex;
-    align-content: space-around;
-  }
-  .span-eye-btn{
-    background-color: var(--secondary-color);
-    border: none;
-  }
-  .span-eye-btn img{
-    height: 3em;
-  }
+.span-eye-btn {
+  position: absolute;
+  right: 5px;
+  height: clamp(25px, 80%, 50px);
+
+  /* center it vertically */
+  top: 50%;
+  transform: translateY(-50%);
+}
