Added landing page
- Added landing page
- Added rooms for users(LeftPane for rooms)
- Added logout functionality
- Navbar is now available for all routes
- Fixed minor bugs
- Updated group and user icons
- Changed stylings

--- a/front-end/src/Pages/Group.module.css
+++ b/front-end/src/Pages/Group.module.css
@@ -1,7 +1,18 @@
 #root {
-  height: 100vh;
+  height: 92vh;
   display: grid;
   grid-template-columns: 250px 1fr;
   overflow: hidden;
   background-color: var(--secondary-color);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#navbar {
+  background: #151a1f;
+  position: relative;
+  z-index: 2;
+  padding: 0.6em;
+  height: 8vh;
+  grid-area: navbar;
 }
