--- a/front-end/src/components/LeftPane/Users/LeftPane.module.css
+++ b/front-end/src/components/LeftPane/Users/LeftPane.module.css
@@ -7,11 +7,10 @@
   color: var(--text-color);
   height: 100vh;
   overflow: auto;
-  gap: 1em;
 }
 
 .user-list-users {
-  display: flex;
+  display: flex !important;
   flex-direction: column;
   gap: 1em;
   width: 100%;
@@ -34,7 +33,8 @@
   width: 50px;
 }
 
-.exit-group,.create-invite{
+.exit-group,
+.create-invite {
   width: 100%;
   margin-top: auto;
 }
@@ -47,4 +47,8 @@
   bottom: 0;
   left: 0;
   width: 18px;
+}
+
+.user-list-heading {
+  text-align: center;
 }
