refactor landing page css

--- a/front-end/src/Pages/Home.module.css
+++ b/front-end/src/Pages/Home.module.css
@@ -63,8 +63,7 @@ a[id='github-btn'] {
   background: #151a1f;
   position: relative;
   z-index: 2;
-  padding: 0.6em;
-  height: 8vh;
+  padding: 1em;
   grid-area: navbar;
 }
 
@@ -104,12 +103,18 @@ a[id='github-btn'] {
   display: flex;
   gap: 1em;
 }
-.landing-page-layout{
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  height: 92vh;
+.landing-page-layout {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  grid-template-rows: max-content 1fr;
+  /* overflow: hidden; */
+  /* background-color: var(--secondary-color); */
+  grid-template-areas:
+    'navbar navbar'
+    'left-pane chat-window';
+  min-height: 100vh;
 }
+
 @keyframes spinning {
   from {
     transform: rotate(0);
