--- a/front-end/src/Pages/Group.module.css
+++ b/front-end/src/Pages/Group.module.css
@@ -1,18 +1,19 @@
 #root {
-  height: 92vh;
+  height: 100vh;
   display: grid;
-  grid-template-columns: 250px 1fr;
+  grid-template-columns: 300px 1fr;
+  grid-template-rows: max-content 1fr;
   overflow: hidden;
   background-color: var(--secondary-color);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  grid-template-areas:
+    'navbar navbar'
+    'left-pane chat-window';
 }
+
 #navbar {
   background: #151a1f;
   position: relative;
   z-index: 2;
-  padding: 0.6em;
-  height: 8vh;
+  padding: 1em;
   grid-area: navbar;
 }
