Added landing page (#46)
* Added user page/logout functionality -1

* Added logout functionality

* updated logout function

* fixed bugs and errors

* Added landing page

- Added landing page
- Added rooms for users(LeftPane for rooms)
- Added logout functionality
- Navbar is now available for all routes
- Fixed minor bugs
- Updated group and user icons
- Changed stylings

* refactor landing page css

* rerender only chat window when group ID changes

This also fixes a bug where the chat window would rerender infinitely after
the messages were fetched.

Co-authored-by: Shashwat <10794178+TheTrio@users.noreply.github.com>

--- a/front-end/src/Pages/Home.module.css
+++ b/front-end/src/Pages/Home.module.css
@@ -63,6 +63,7 @@ a[id='github-btn'] {
   background: #151a1f;
   position: relative;
   z-index: 2;
+  padding: 1em;
   grid-area: navbar;
 }
 
@@ -101,6 +102,17 @@ a[id='github-btn'] {
 .btn-bar {
   display: flex;
   gap: 1em;
+}
+.landing-page-layout {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  grid-template-rows: max-content 1fr;
+  /* overflow: hidden; */
+  /* background-color: var(--secondary-color); */
+  grid-template-areas:
+    'navbar navbar'
+    'left-pane chat-window';
+  min-height: 100vh;
 }
 
 @keyframes spinning {
